--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -44,38 +44,37 @@
 
 		/* Styling form-contro Radio Button and Checkbox*/
 		.form-control input[type="radio"],
-        .form-control input[type="checkbox"] {
-            display: inline-block;
-            width: auto;
-        }
+		.form-control input[type="checkbox"] {
+			display: inline-block;
+			width: auto;
+		}
 
-        .form-control
-        {
-        	text-align: left;
-        }
+        	.form-control{
+        	text-align: left
+		}
 
-        /* Styling Title */
-        h1{color: #484446}
+        	/* Styling Title */
+        	h1{color: #484446}
  
-        /* Styling Button */
-        button {
-            background-color: #FF70A0;
-            border: 1px solid #777;
-            border-radius: 2px;
-            font-family: inherit;
-            font-size: 21px;
-            display: block;
-            width: 100%;
-            margin-top: 50px;
-            margin-bottom: 20px;
-        }
+		/* Styling Button */
+		button {
+		    background-color: #FF70A0;
+		    border: 1px solid #777;
+		    border-radius: 2px;
+		    font-family: inherit;
+		    font-size: 21px;
+		    display: block;
+		    width: 100%;
+		    margin-top: 50px;
+		    margin-bottom: 20px;
+		}
 
-        /* Align Left */
-        .form-control input{
-        	text-align: left;
-        	display: inline;
-        }
-        }
+		/* Align Left */
+		.form-control input{
+			text-align: left;
+			display: inline;
+		}
+		
     </style>
 </head>
 
@@ -187,8 +186,8 @@
             <label for="row-5">
                 <input type="radio"
                        id="level-5"
-                       name="level">Not at all</input>
-            </label>
+		       name="level">Not at all</input>
+	    </label>
         </div>
         <br/>
         <br/>
