--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -8,6 +8,11 @@
 	<style>
 
 		
+		    /* Styling the image*/
+		img{
+        		border-radius: 30%;	
+        	}
+		
 		/* styling the body element i.e. Color, Font, Alignment */
 		body{
 			background-color: #FFB6BB;
