Update website name on navbar according to the main survey page: Mental Spa.

--- a/src/main/resources/templates/task_quote.html
+++ b/src/main/resources/templates/task_quote.html
@@ -61,7 +61,7 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a class="nav-link px-2 website-name" href="#"><b>Mental Placebo</b></a></li>
+            <li><a class="nav-link px-2 website-name" href="#"><b>Mental Spa</b></a></li>
             <li><a class="nav-link px-2 survey-link" href="/survey/questions">Survey</a></li>
             <li><a class="nav-link px-2 survey-link" href="/task/games">Games</a></li>
             <li><a class="nav-link px-2 help-link" href="/survey/help"><b>Get Help</b></a></li>
