--- a/src/main/resources/templates/task_quote.html
+++ b/src/main/resources/templates/task_quote.html
@@ -42,6 +42,14 @@
             color: tomato;
         }
 
+        .text-dark-grey {
+            color: #484446;
+        }
+
+        .bottom-padding {
+            padding-bottom: 2rem;
+        }
+
         /* to prevent simple copy & paste */
         .cannot-cppy {
             -webkit-user-select: none;
@@ -77,8 +85,7 @@
 <div class="container">
     <main>
         <div class="py-5 text-center">
-            <h2> Could you help my copy type the following quotes? </h2>
-            <br>
+            <h2 class="text-dark-grey bottom-padding"> Could you help me copy type the following quotes? </h2>
             <div aria-label="Animated striped example" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75"
                  class="progress" role="progressbar">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" id="progress-bar"
