--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -2,15 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Get Help</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="flash sale product list" name="description">
+    <meta content="Hugo 0.108.0" name="generator">
+    <!--  Bootstrap  -->
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" rel="stylesheet">
+
+    <style>
+        .container {
+            max-width: 960px;
+        }
+
+        /* customized navbar styles: start */
+        .website-name {
+            color: violet;
+        }
+
+        .survey-link {
+            color: lightsalmon;
+        }
+
+        .help-link {
+            color: tomato;
+        }
+
+        /* customized navbar styles: end */
+
+        .text-dark-grey {
+            color: #484446;
+        }
+
+        .bottom-padding {
+            padding-bottom: 2rem;
+        }
+
+        .phone-number-colored {
+            color: #004DFF;
+        }
+    </style>
 </head>
 <body>
 
-<!--TODO-->
-Button to: Counseling page - wellness @ penn; test: "Let's talk!"
-https://wellness.upenn.edu/student-health-and-counseling/student-health-and-counseling-counseling#Schedule%20an%20Appointment
-or
-may call 215-898-7021 and press 1 to speak to a counseling provider at any time of the day or night, 24/7.
+<div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a class="nav-link px-2 website-name"><b>Mental Spa</b></a></li>
+            <li><a class="nav-link px-2 survey-link" href="/main/survey">Survey</a></li>
+            <li><a class="nav-link px-2 survey-link" href="/task/games">Games</a></li>
+            <li><a class="nav-link px-2 help-link" href="/main/help"><b>Get Help</b></a></li>
+        </ul>
+
+        <!--        <div class="col-md-3 text-end">-->
+        <!--            <button type="button" class="btn btn-outline-primary me-2">Login</button>-->
+        <!--            <button type="button" class="btn btn-primary">Sign-up</button>-->
+        <!--        </div>-->
+    </header>
+
+    <main class="text-center">
+
+        <div class="container">
+            <div class="py-5 text-center">
+                <h2 class="text-dark-grey"> Call </h2>
+                <h2 class="phone-number-colored"><b>215-898-7021</b></h2>
+                <h2 class="text-dark-grey"> and press <b class="phone-number-colored">1</b></h2>
+                <h2 class="text-dark-grey bottom-padding"> at any time of the day or night.</h2>
+                <a class="btn btn-outline-primary btn-lg"
+                   href="https://wellness.upenn.edu/student-health-and-counseling/student-health-and-counseling-counseling#Schedule%20an%20Appointment"
+                   type="button">
+                    <b>I wanna talk to someone in person</b>.
+                </a>
+            </div>
+        </div>
+
+    </main>
+
+</div>
+
 
 </body>
 </html>
