--- a/src/main/resources/templates/task_quote.html
+++ b/src/main/resources/templates/task_quote.html
@@ -6,6 +6,7 @@
     <meta content="flash sale product list" name="description">
     <meta content="Hugo 0.108.0" name="generator">
     <title>Copy Typing of Quote</title>
+    <!--  Bootstrap  -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" rel="stylesheet">
 
@@ -30,6 +31,7 @@
             max-width: 960px;
         }
 
+        /* customized navbar styles: start */
         .website-name {
             color: violet;
         }
@@ -41,6 +43,8 @@
         .help-link {
             color: tomato;
         }
+
+        /* customized navbar styles: end */
 
         .text-dark-grey {
             color: #484446;
@@ -69,10 +73,10 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a class="nav-link px-2 website-name" href="#"><b>Mental Spa</b></a></li>
-            <li><a class="nav-link px-2 survey-link" href="/survey/questions">Survey</a></li>
+            <li><a class="nav-link px-2 website-name"><b>Mental Spa</b></a></li>
+            <li><a class="nav-link px-2 survey-link" href="/main/survey">Survey</a></li>
             <li><a class="nav-link px-2 survey-link" href="/task/games">Games</a></li>
-            <li><a class="nav-link px-2 help-link" href="/survey/help"><b>Get Help</b></a></li>
+            <li><a class="nav-link px-2 help-link" href="/main/help"><b>Get Help</b></a></li>
         </ul>
 
         <!--        <div class="col-md-3 text-end">-->
