help.html: minor style change.

--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -39,7 +39,7 @@
         }
 
         .phone-number-colored {
-            color: #004DFF;
+            color: mediumvioletred;
         }
     </style>
 </head>
