--- a/src/main/resources/templates/task_quote.html
+++ b/src/main/resources/templates/task_quote.html
@@ -73,8 +73,8 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a class="nav-link px-2 website-name"><b>Mental Spa</b></a></li>
-            <li><a class="nav-link px-2 survey-link" href="/main/survey">Survey</a></li>
-            <li><a class="nav-link px-2 survey-link" href="/task/games">Games</a></li>
+            <li><a class="nav-link px-2 survey-link" href="/main/survey">Questionnaire</a></li>
+            <li><a class="nav-link px-2 survey-link" href="/task/all">All Tasks</a></li>
             <li><a class="nav-link px-2 help-link" href="/main/help"><b>Get Help</b></a></li>
         </ul>
 
@@ -153,7 +153,6 @@
     }
 
     function incrementProgress() {
-        console.log("In function incrementProgress()");
         //increment progress by 25%
         if (document.getElementById("progress-bar").style.width === '0%') {
             document.getElementById("progress-bar").style.width = '25%';
