Modified questionnaire page for redirecting. Replaced local static resources with cloudinary urls.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -82,7 +82,9 @@
 
         <!-- logo -->
         <span>
-            <img class="logo" src="../static/img/logo.jpg" style="width: 100px; height: 100px;">
+            <img class="logo"
+                 src="https://res.cloudinary.com/dvidz8bwi/image/upload/v1674142609/CIT%20Hackathon/logo.jpg"
+                 style="width: 100px; height: 100px;">
             <p></p>
         </span>
 
