--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -18,6 +18,7 @@
 
         /* styling the body element i.e. Color, Font, Alignment */
         body {
+            background-color: #FEEAEB;
             font-family: Verdana;
             text-align: center;
         }
@@ -98,6 +99,14 @@
         }
 
         /* customized navbar styles: end */
+
+        .btn-customized {
+            background-color: #FEDDDE;
+        }
+
+        .btn-customized:hover {
+            background-color: #FEC8C9;
+        }
 
     </style>
 </head>
@@ -329,7 +338,7 @@
     <br/>
     <br/>
 
-    <button class="w-50 btn btn-lg btn-info" onclick="check()" type="button">
+    <button class="w-50 btn btn-lg btn-light btn-customized" onclick="check()" type="button">
         Submit
     </button>
 
