--- a/src/main/resources/templates/all_tasks.html
+++ b/src/main/resources/templates/all_tasks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="Hugo 0.108.0" name="generator">
-    <title>Copy Typing of Quotes</title>
+    <title>Browse All Tasks</title>
     <!--  Bootstrap  -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" rel="stylesheet">
@@ -87,38 +87,69 @@
 
 <div class="container">
     <main>
-        <div class="py-5 text-center">
-            <h2 class="text-dark-grey bottom-padding"> Could you help me copy type the following quotes? </h2>
-            <div aria-label="Animated striped example" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75"
-                 class="progress" role="progressbar">
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" id="progress-bar"
-                     style="width: 0%"></div>
+        <div class="row" data-masonry='{"percentPosition": true }'>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
             </div>
-        </div>
-
-        <!--        <button class="btn btn-secondary" id="testID" onclick="test(this.id)"-->
-        <!--                type="button">Test Button-->
-        <!--        </button>-->
-
-        <div class="row g-5 text-center">
-            <div class="col-md-1 col-lg-1"></div>
-            <div class="col-md-10 col-lg-10">
-                <div class="row g-3" th:each="quote: ${quotes}">
-                    <div class="col-12">
-                        <!-- set id with Thymeleaf in sequence for function check() use-->
-                        <label class="form-label cannot-cppy" th:id="${#ids.seq('target')}"
-                               th:text="${quote.getContent()}"></label>
-                        <div class="input-group">
-                            <input class="form-control" placeholder="Type here" th:id="${#ids.seq('typed')}"
-                                   type="text">
-                            <button class="btn btn-secondary" onclick="check(this.id)" th:id="${#ids.seq('')}"
-                                    type="button">Done!
-                            </button>
-                        </div>
-                        <br>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card text-center" onclick="redirectToSong()">
+                    <div class="card-body">
+                        <h5 class="card-title">Enjoy a song</h5>
+                        <p class="card-text">Forget about all the sadness or stress in your life. <br>Let the music
+                            soothe your soul.</p>
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card text-center" onclick="redirectToHour()">
+                    <div class="card-body">
+                        <h5 class="card-title">Clear your mind for 1 hour</h5>
+                        <p class="card-text">Workout, meditation, cleaning, ... <br>Do anything that keeps you away from
+                            anxiety or pressure.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card text-center" onclick="redirectToQuote()">
+                    <div class="card-body">
+                        <h5 class="card-title">Repeat some quotes</h5>
+                        <p class="card-text">Let the words influence your mind and give you strength.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="card text-center" onclick="redirectToClean()">
+                    <div class="card-body">
+                        <h5 class="card-title">Clean a desk (virtually)</h5>
+                        <p class="card-text">Hope this virtual cleaning game comforts you.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <!--  just a placeholder  -->
+            </div>
+
         </div>
     </main>
 
@@ -137,36 +168,21 @@
 </body>
 
 <script>
-    function check(clicked_id) {
 
-        var targetID = 'target' + clicked_id;
-        var typedID = 'typed' + clicked_id;
-        var target = document.getElementById(targetID);
-        var typed = document.getElementById(typedID);
-
-        if (target.textContent === typed.value) {  //if correct, add progress
-            swal("Well done!"); //used sweetalert instead for beauty //alert("Well done!");
-            incrementProgress();
-        } else {    //if not
-            swal("Oops! There's typo.");
-        }
+    function redirectToSong() {
+        window.location.href = "/task/song";
     }
 
-    function incrementProgress() {
-        //increment progress by 25%
-        if (document.getElementById("progress-bar").style.width === '0%') {
-            document.getElementById("progress-bar").style.width = '25%';
-        } else if (document.getElementById("progress-bar").style.width === '25%') {
-            document.getElementById("progress-bar").style.width = '50%';
-        } else if (document.getElementById("progress-bar").style.width === '50%') {
-            document.getElementById("progress-bar").style.width = '75%';
-        } else if (document.getElementById("progress-bar").style.width === '75%') {
-            document.getElementById("progress-bar").style.width = '100%';
-        }
-        //check if all done
-        if (document.getElementById("progress-bar").style.width === '100%') {
-            swal("Good job!", "You've completed all quotes!", "success");
-        }
+    function redirectToClean() {
+        window.location.href = "/task/clean";
+    }
+
+    function redirectToQuote() {
+        window.location.href = "/task/quote";
+    }
+
+    function redirectToHour() {
+        window.location.href = "/task/hour";
     }
 
 </script>
