--- a/src/main/resources/templates/survey.html
+++ b/src/main/resources/templates/survey.html
@@ -347,11 +347,11 @@
     <script>
         /*	Variable nQuestion is the number of questions answered; variable score is the total score	*/
         var score = 0;
-        var q1A = document.getElementByName('q1')
-        var q2A = document.getElementByName('q2')
-        var q3A = document.getElementByName('q3')
-        var q4A = document.getElementByName('q4')
-        var q5A = document.getElementByName('q5')
+        var q1A = document.getElementByName('q1');
+        var q2A = document.getElementByName('q2');
+        var q3A = document.getElementByName('q3');
+        var q4A = document.getElementByName('q4');
+        var q5A = document.getElementByName('q5');
 
         q1A.forEach((e) => {
             if (e.checked) {
