Maintained both static and dynamic paths.

--- a/src/main/resources/templates/task_song.html
+++ b/src/main/resources/templates/task_song.html
@@ -13,6 +13,11 @@
 <link rel="stylesheet" th:href="@{/css/task_song.css}">
 <script th:src="@{/task_song.js}" type="text/javascript"></script>
 <script th:src="@{/task_song_font/iconfont.js}" type="text/javascript"></script>
+<!-- static version below-->
+<!--<link href="../static/task_song_font/iconfont.css" rel="stylesheet">-->
+<!--<link href="../static//css/task_song.css" rel="stylesheet">-->
+<!--<script src="../static//task_song.js}" type="text/javascript"></script>-->
+<!--<script src="../static//task_song_font/iconfont.js" type="text/javascript"></script>-->
 
 <style>
     /* customized navbar styles */
